fix - Fixing tabIndex property to inhance accessability, and gap between span in markup

--- a/app/components/Rating/Rating.module.css
+++ b/app/components/Rating/Rating.module.css
@@ -1,8 +1,8 @@
-.star {
+.star svg {
     margin-right: 5px;
 }
 
-.filled {
+.filled svg {
     fill: var(--primary);
 }
 
